--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   responsive_builder: ^0.3.0
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.12+4
+  badges: ^1.1.6
 
 flutter:
   uses-material-design: true
